Fix spacing issue in wallpaper calculator popup

--- a/src/containers/pdp/components/wallpaperPopup/styles.scss
+++ b/src/containers/pdp/components/wallpaperPopup/styles.scss
@@ -33,7 +33,6 @@
 
 .field {
     margin-bottom: 20px;
-    border: 1px solid #eee;
 }
 
 .result {
